--- a/index.html
+++ b/index.html
@@ -105,7 +105,65 @@
             </div>
 
         </section>
+        <section class="resume">
+            <h3 class="section-title text-center">
+                A Summary of My Resume
+            </h3>
+            <div class="resume-container">
+                <!-- .resume-column*2>h3.column-title+.exp*3>h4.exp-title+h5.exp-subtitle+exp.description -->
+                <div class="resume-column">
+                    <h3 class="column-title">My Education</h3>
+                    <div class="exp">
+                        <h4 class="exp-title">Master in Computer Engineering</h4>
+                        <h5 class="exp-subtitle">Harvard University / 2015 - 2017</h5>
+                        <exp class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="exp-title">Master in Computer Engineering</h4>
+                        <h5 class="exp-subtitle">Harvard University / 2015 - 2017</h5>
+                        <exp class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                    </div>
+                    <hr>
+                    <div class="exp">
+                        <h4 class="exp-title">Master in Computer Engineering</h4>
+                        <h5 class="exp-subtitle">Harvard University / 2015 - 2017</h5>
+                        <exp class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                    </div>
+                </div>
 
+                <div class="resume-column">
+                    <h3 class="column-title">My Experience</h3>
+                    <div class="exp">
+                        <h4 class="exp-title">Sr. Font End Developer</h4>
+                        <h5 class="exp-subtitle">Apple Inc / 2020 - Current</h5>
+                        <exp class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                    </div>
+                    <div class="exp">
+                        <h4 class="exp-title">Jr. Font End Developer</h4>
+                        <h5 class="exp-subtitle">Dribbble Inc / 2018 - 2022</h5>
+                        <exp class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                    </div>
+                    <div class="exp">
+                        <h4 class="exp-title">HTML Developer</h4>
+                        <h5 class="exp-subtitle">Adobe Inc / 2017 - 2018</h5>
+                        <exp class="description">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                    </div>
+                </div>
+
+            </div>
+            <div class="text-center resume-download-cv">
+                <button class="btn-primary">Download CV</button>
+            </div>
+            
+
+        </section>
     </main>
 
     <footer>
