--- a/index.html
+++ b/index.html
@@ -166,8 +166,29 @@
         </section>
     </main>
 
-    <footer>
-
+    <footer class="secondary-background">
+        <div class="footer-column">
+            <h3 class="section-title">
+                Lets Connect
+            </h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">
+                Lets Message Me
+            </h3>
+            <form action="">
+                <input type="text" name="" placeholder="Your Name" id="">
+                <input type="text" name="" placeholder="Your Email" id="">
+                <textarea name="" id="" cols="30" rows="20" placeholder="Your Message"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
 
     </footer>
 </body>
