--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/0fdfb3cf38.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="open-sans-normal">
@@ -30,8 +31,8 @@
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.
                 </p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="banner-profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -116,22 +117,25 @@
                     <div class="exp">
                         <h4 class="exp-title">Master in Computer Engineering</h4>
                         <h5 class="exp-subtitle">Harvard University / 2015 - 2017</h5>
-                        <exp class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                        <exp class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </exp>
                     </div>
                     <hr>
                     <div class="exp">
                         <h4 class="exp-title">Master in Computer Engineering</h4>
                         <h5 class="exp-subtitle">Harvard University / 2015 - 2017</h5>
-                        <exp class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                        <exp class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </exp>
                     </div>
                     <hr>
                     <div class="exp">
                         <h4 class="exp-title">Master in Computer Engineering</h4>
                         <h5 class="exp-subtitle">Harvard University / 2015 - 2017</h5>
-                        <exp class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                        <exp class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </exp>
                     </div>
                 </div>
 
@@ -140,28 +144,31 @@
                     <div class="exp">
                         <h4 class="exp-title">Sr. Font End Developer</h4>
                         <h5 class="exp-subtitle">Apple Inc / 2020 - Current</h5>
-                        <exp class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                        <exp class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </exp>
                     </div>
                     <div class="exp">
                         <h4 class="exp-title">Jr. Font End Developer</h4>
                         <h5 class="exp-subtitle">Dribbble Inc / 2018 - 2022</h5>
-                        <exp class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                        <exp class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </exp>
                     </div>
                     <div class="exp">
                         <h4 class="exp-title">HTML Developer</h4>
                         <h5 class="exp-subtitle">Adobe Inc / 2017 - 2018</h5>
-                        <exp class="description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</exp>
+                        <exp class="description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </exp>
                     </div>
                 </div>
 
             </div>
             <div class="text-center resume-download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i><i class="fa-solid fa-download"></i></i> Download CV</button>
             </div>
-            
+
 
         </section>
     </main>
@@ -171,7 +178,8 @@
             <h3 class="section-title">
                 Lets Connect
             </h3>
-            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                Monday through Friday.</p>
             <div>
                 <a href=""><img src="images/icons/facebook.png" alt=""></a>
                 <a href=""><img src="images/icons/twitter.png" alt=""></a>
